--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,7 +1,7 @@
 ---
 # Java
 rk_tomcat::java::zulu_package: zulu-8
-rk_tomcat::java::zulu_version: 1.8.0_66-8.11.0.1
+rk_tomcat::java::zulu_version: 8.17.0.3-1
 
 # Tomcat
 rk_tomcat::tomcat::hosts:
