Ignoring IntelliJ project files

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ rk_tomcat.iml
 .idea/vcs.xml
 .idea/workspace.xml
 .idea/copyright/profiles_settings.xml
+
+.idea/inspectionProfiles/profiles_settings.xml
+
+.idea/inspectionProfiles/Project_Default.xml
