first try at creating auth files in catalina_home/auth

--- a/spec/fixtures/hieradata/secrets-common.yaml
+++ b/spec/fixtures/hieradata/secrets-common.yaml
@@ -1,6 +1,12 @@
 ---
 # Tomcat
 rk_tomcat::stack: rk-stage-app
+rk_tomcat::auth::content:
+    foobar: '{"foo":"bar"}'
+rk_tomcat::auth::dir: "%{hiera('rk_tomcat::deploy::catalina_home')}/auth"
+rk_tomcat::auth::owner: "%{alias('rk_tomcat::tomcat::tomcat_user')}"
+rk_tomcat::auth::group: "%{alias('rk_tomcat::tomcat::tomcat_group')}"
+rk_tomcat::auth::mode: "0400"
 rk_tomcat::deploy::stack: "%{alias('rk_tomcat::stack')}"
 rk_tomcat::deploy::aws_keys:
     sqs:
