zut alors, i have missed one

--- a/spec/fixtures/hieradata/secrets-common.yaml
+++ b/spec/fixtures/hieradata/secrets-common.yaml
@@ -3,7 +3,7 @@
 rk_tomcat::stack: rk-stage-app
 rk_tomcat::auth::content:
     foobar: '{"foo":"bar"}'
-rk_tomcat::auth::dir: "%{hiera('rk_tomcat::deploy::catalina_home')}/auth"
+rk_tomcat::auth::dir: "%{hiera('rk_tomcat::deploy::catalina_home')}/conf/auth"
 rk_tomcat::auth::owner: "%{alias('rk_tomcat::tomcat::tomcat_user')}"
 rk_tomcat::auth::group: "%{alias('rk_tomcat::tomcat::tomcat_group')}"
 rk_tomcat::auth::mode: "0400"
