--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -13,6 +13,9 @@ fixtures:
     tomcat:
        repo: "puppetlabs/tomcat"
        ref: "1.4.1"
+    threatstack:
+       repo: "threatstack/threatstack"
+       ref: "1.5.3"
 
   symlinks:
     rk_tomcat: "#{source_dir}"
