--- a/data/common.yaml
+++ b/data/common.yaml
@@ -16,6 +16,7 @@ rk_tomcat::tomcat::catalina_home: /usr/share/tomcat7
 rk_tomcat::deploy::catalina_home: "%{alias('rk_tomcat::tomcat::catalina_home')}"
 rk_tomcat::deploy::tomcat_svc: "%{alias('rk_tomcat::tomcat::tomcat_svc')}"
 rk_tomcat::deploy::newrelic_enabled: false
+rk_tomcat::deploy::tmpdir: "%{alias('rk_tomcat::tmpfs::mountpoint')}"
 rk_tomcat::kinesis::agent_cfg: /etc/aws-kinesis/agent.json
 rk_tomcat::kinesis::agent_pkg: aws-kinesis-agent
 rk_tomcat::kinesis::agent_svc: aws-kinesis-agent
@@ -23,6 +24,9 @@ rk_tomcat::kinesis::flows:
   -
 rk_tomcat::limits::nofile: 65536
 rk_tomcat::rsyslog::deploy::catalina_home: "%{alias('rk_tomcat::tomcat::catalina_home')}"
+rk_tomcat::tmpfs::group: "%{alias('rk_tomcat::tomcat::tomcat_group')}"
+rk_tomcat::tmpfs::mountpoint: "/tmpfs"
+rk_tomcat::tmpfs::ramdisk_size: "128m"
 rk_tomcat::tomcat::tomcat_instance: default
 rk_tomcat::tomcat::tomcat_pkg: tomcat7
 rk_tomcat::tomcat::tomcat_native_pkg: tomcat-native
