Added logdna_tokens declaration

--- a/spec/fixtures/hieradata/secrets-common.yaml
+++ b/spec/fixtures/hieradata/secrets-common.yaml
@@ -32,6 +32,8 @@ rk_tomcat::deploy::deploy_password: password
 rk_tomcat::deploy::logentries_tokens:
     analytics: token-token-token-token-token
     applogs: token-token-token-token-token
+rk_tomcat::deploy::logdna_tokens:
+    applogs: token-token-token-token-token
 rk_tomcat::deploy::postgres:
     master:
         db: "rk%{hiera('rk_tomcat::deploy::staging_instance')}"
