--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -16,6 +16,9 @@ fixtures:
     threatstack:
        repo: "threatstack/threatstack"
        ref: "1.5.4"
+    consul:
+       repo: "KyleAnderson/consul"
+       ref: "3.1.2"
 
   symlinks:
     rk_tomcat: "#{source_dir}"
