--- a/spec/fixtures/hieradata/common.yaml
+++ b/spec/fixtures/hieradata/common.yaml
@@ -54,6 +54,7 @@ rk_tomcat::goss::tomcat_group: "%{alias('rk_tomcat::tomcat::tomcat_group')}"
 rk_tomcat::goss::tomcat_logdir: "%{alias('rk_tomcat::tomcat::logdir')}"
 rk_tomcat::goss::zulu_package: "%{alias('rk_tomcat::java::zulu_package')}"
 rk_tomcat::goss::zulu_version: "%{alias('rk_tomcat::java::zulu_version')}"
+rk_tomcat::goss::consul_version: "%{alias('rk_tomcat::consul::version')}"
 
 # Fonts
 rk_tomcat::fonts::packages:
