adding consul agent (#16)
* Adding consul agent to our builds

* Fixing syntax error

* Removing curly braces around vars

* Adding hiera entries to tests

* Update fixtures

* Update consul module to help pass tests *sigh*

* Set , :architecture => 'x86_64' fact

* adding operatingsystem => 'Amazon'

* Set osfamily to RedHat

* Adding archive module to fixtures

* Setting the correct archive version for puppet3

* Adding CODEOWNERS File

* Adding GOSS Tests

* I hate rspec sooo much right now

* Update goss permissions

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -16,6 +16,12 @@ fixtures:
     threatstack:
        repo: "threatstack/threatstack"
        ref: "1.5.4"
+    consul:
+       repo: "KyleAnderson/consul"
+       ref: "3.2.0"
+    archive:
+       repo: "puppet/archive"
+       ref: "1.3.0"
 
   symlinks:
     rk_tomcat: "#{source_dir}"
