--- a/spec/fixtures/hieradata/common.yaml
+++ b/spec/fixtures/hieradata/common.yaml
@@ -13,6 +13,7 @@ rk_tomcat::tomcat::logdir: /var/log/tomcat7
 rk_tomcat::tomcat::postgres_driver: postgresql-9.4-1203.jdbc42
 rk_tomcat::tomcat::postgres_tls: false
 rk_tomcat::tomcat::catalina_home: /usr/share/tomcat7
+rk_tomcat::tomcat::save_crash_dumps: true
 rk_tomcat::deploy::catalina_home: "%{alias('rk_tomcat::tomcat::catalina_home')}"
 rk_tomcat::deploy::tomcat_svc: "%{alias('rk_tomcat::tomcat::tomcat_svc')}"
 rk_tomcat::deploy::newrelic_enabled: false
