feat: send catalina.out to LogDNA (#20)

--- a/spec/fixtures/hieradata/secrets-common.yaml
+++ b/spec/fixtures/hieradata/secrets-common.yaml
@@ -76,6 +76,7 @@ rk_tomcat::newrelic::deploy::attr_exclude:
     - request.parameters.password
     - request.parameters.ACCT
     - request.parameters.CVV2
+rk_tomcat::rsyslog::deploy::logdna_token: logdnatokenlogdnatoken
 
 # Jenkins
 rk_jenkins::master::users:
