fix: argh, figured out what was wrong with rsyslog logdna

--- a/spec/fixtures/hieradata/secrets-common.yaml
+++ b/spec/fixtures/hieradata/secrets-common.yaml
@@ -76,7 +76,7 @@ rk_tomcat::newrelic::deploy::attr_exclude:
     - request.parameters.password
     - request.parameters.ACCT
     - request.parameters.CVV2
-rk_tomcat::rsyslog::deploy::logdna_token: logdnatokenlogdnatoken
+rk_tomcat::rsyslog::deploy::logdna_tokens: "%{alias('rk_tomcat::deploy::logdna_tokens')}"
 
 # Jenkins
 rk_jenkins::master::users:
